# ztalib

./: .gitignore  ApeCore.h  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  wheels.yml
bindings/: ApeExp.cpp  CMakeLists.txt  pyzta.cpp
bindings/python/: pyape.py
bindings/src/: pyzta.cpp
docs/: mkdocs.yml  requirements.txt  zensical.toml
docs/docs/: compile.md  index.md
docs/docs/example/: pngexporter.md
docs/docs/reference/: palf.md  ztaf.md
docs/rename/reference/: ztaf.md
examples/: main.cpp
examples/pyzta/: requirements.txt  ztapng.py
include/: ape.cpp  ape.h  apeheader.h  apespeed.h  color.h  frame.h  outputbuffer.h  pixelblock.h  pixelset.h
include/ztalib/: PalF.h  ZtaF.h
include/ztalib/data/: ZtaData.h  ZtaFrame.h  ZtaFrameBuffer.h  ZtaInfo.h  ZtaPixelBlock.h  ZtaPixelSet.h  ZtaVersion.h.in
src/data/: ApeColor.h  ApeData.cpp  ApeData.h  ApeFrame.h  ApeFrameBuffer.cpp  ApeFrameBuffer.h  ApeHeader.h  ApeInfo.h  ApePixelBlock.h  ApePixelSet.h  ZtaColor.h  ZtaData.cpp  ZtaData.h  ZtaFrame.h  ZtaFrameBuffer.cpp  ZtaFrameBuffer.h  ZtaFrameBufferObject.h  ZtaInfo.h  ZtaPixelBlock.h  ZtaPixelSet.h
src/other/: ApeUtils.cpp  ApeUtils.h  ZtaUtils.cpp  ZtaUtils.h
src/parsers/: ApeF.cpp  ApeF.h  PalF.cpp  PalF.h  ZtaF.cpp  ZtaF.h
tests/examples/: main.cpp
tests/include/: ApeCore.h
tests/pyzta/: test_ztaf.py
