[build-system]
requires = ["scikit-build-core>=0.12"]
build-backend = "scikit_build_core.build"

[project]
name = "pyzta"
version = "0.10.2"
authors = [
    { name = "Eric Galvan", email = "contact@goosifer.io" }
]
description = "Python bindings for ztalib"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]
 
[project.urls]
Homepage = "https://ztalib.goosifer.io/"
Repository = "https://github.com/GoosiferIO/ztalib"
Issues = "https://github.com/GoosiferIO/ztalib/issues"
Changelog = "https://github.com/GoosiferIO/ztalib/releases"
Discord = "https://discord.gg/g5FvNrRQGC"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DBUILD_PY_BINDINGS=ON", "-DBUILD_CPP_LIB=OFF"]
wheel.packages = []
sdist.include = ["LICENSE"]
